# webcom_ical

./: .env copy  .env.example  .gitignore  Cargo.toml  Dockerfile  Ical Changelog.md  README.md  diesel.toml  docker-compose.yml  hermes.ical  kuma_data.toml  todo.md  youp.ical
Gecko_driver/: Dockerfile
ansible/: playbook.yml
ansible/group_vars/: all.yml.example
assets/: logo.xcf  test.html
entity/: Cargo.toml
entity/src/: donation_text.rs  email_properties.rs  general_properties.rs  general_properties_db.rs  kuma_properties.rs  mod.rs  prelude.rs  user_data.rs  user_properties.rs
kuma/: name
migration/: Cargo.toml
migration/src/: lib.rs  m20251006_130009_email.rs  m20251006_140009_donation.rs  m20251006_141509_kuma.rs  m20251006_143409_general_settings.rs  m20251008_194017_user_settings.rs  m20251008_194417_user_data.rs
migrations/: 20250818180351_donation_text.down.sql  20250818180351_donation_text.up.sql  20250818180451_kuma_properties.down.sql  20250818180451_kuma_properties.up.sql  20250818180545_email_properties.down.sql  20250818180545_email_properties.up.sql  20250818180611_user_properties.down.sql  20250818180611_user_properties.up.sql  20250818180645_general_properties.down.sql  20250818180645_general_properties.up.sql  20250818180751_user_data.down.sql  20250818180751_user_data.up.sql
scripts/: encrypt.py  entrypoint.sh  env_manager.sh  find_name.sh  find_user.py  fish_function  get_email_list.sh  logbook_check.py  replace.py  update_webcom.sh
scripts/fish functions/: change_password.fish  f.fish  logbook.fish  quit.fish  restart.fish
src/: chatgpt_suggestion.rs  database.rs  email.rs  errors.rs  execution.rs  gebroken_shifts.rs  health.rs  ical.rs  kuma.rs  main.rs  parsing.rs  shift.rs  variables.rs  watchdog.rs
templates/: changed_shift.html  email_base.html  failed_signin.html  kuma_offline.html  kuma_online.html  onboarding_auth.html  onboarding_base.html  removed_shift_base.html  shift_table.html  signin_succesful.html
uitleg/: Aanmeldposter\.odg  Agenda toevoegen google agenda.pptx  New calendar logic.drawio  google calendar uitleg.odg
