[package]
name = "webcom_ical"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.22"
dotenvy = "0.15.7"
thirtyfour = "0.34.0"
tokio = { version = "1.47.1", features = ["full"] }
time = { version = "0.3.41", features = [
    "parsing",
    "macros",
    "formatting",
    "serde",
] }
kuma-client = "1.0.0"
url = "2.5.4"
icalendar = {version = "0.17.1", features = ["serde_json", "serde", "default"]} 
chrono = "0.4.41"
serde_json = "1.0.142"
async-recursion = "1.1.1"
lettre = "0.11.18"
thiserror = "2.0.12"
strfmt = "0.2.5"
pretty_env_logger = "0.5.0"
log = "0.4.27"