[package]
name = "webcom_ical"
version = "0.3.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.23"
dotenvy = "0.15.7"
thirtyfour = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
time = { version = "0.3.41", features = [
    "parsing",
    "macros",
    "formatting",
    "serde",
] }
migration = { path = "migration" }
kuma-client = "1.0.0"
url = "2.5.7"
icalendar = {version = "0.17.3", features = ["serde_json", "serde", "default"]} 
chrono = "0.4.41"
serde_json = "1.0.143"
async-recursion = "1.1.1"
lettre = "0.11.18"
thiserror = "2.0.16"
strfmt = "0.2.5"
pretty_env_logger = "0.5.0"
log = "0.4.27"
rand = "0.9.2"
clap = { version = "4.5.46", features = ["derive"] }
ctrlc = "3.4.7"
ipipe = "0.11.7"
serde_with = "3.14.0"
sea-orm = { version = "1.1.16", features = ["runtime-tokio", "sqlx-postgres"] }
